fix: making tags flex-wrap

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -12,6 +12,7 @@ html, body, #root {
 body {
   background-color: #0f1219;
   color: white;
+  height: 100%;
 }
 
 * {
